# life-in-weeks

./: .gitignore  Cargo.toml  ICON_SETUP.md  LICENSE  README.md  generate-icons.js  generate-icons.py  package.json
.github/workflows/: ci.yml  deploy-website.yml  release.yml
crates/liw-cli/: Cargo.toml
crates/liw-cli/src/: main.rs
crates/liw-core/: Cargo.toml
crates/liw-core/src/: config.rs  lib.rs  modes.rs  renderer.rs  scheduler.rs  wallpaper.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tauri-app/src/: index.html  styles.css
website/: README.md  index.html  script.js  styles.css  vercel.json
