[package]
name = "liw-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Dag"]
license = "MIT"
description = "Life in Weeks - GUI App"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
liw-core = { path = "../crates/liw-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
